--- a/student_helper_page/setup.html
+++ b/student_helper_page/setup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeinClassAI - 學生設定助手</title>
+    <title>德音國小 DeinClassAI - 學生設定助手</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -150,7 +150,7 @@
         <div class="setup-container">
             <!-- 歡迎標題 -->
             <div class="welcome-header">
-                <h1><i class="fas fa-robot me-3"></i>歡迎使用 DeinClassAI</h1>
+                <h1><i class="fas fa-robot me-3"></i>德音國小 DeinClassAI</h1>
                 <p class="text-muted">您的專屬 AI 學習助手已準備就緒！</p>
             </div>
 
